<resources>
    <string name="app_name">EffectiveMobileTest</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="new_">New</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="search">Search</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="features">Features</string>
    <string name="details">Details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
</resources>