<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/dark_rounded_button"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/titlePage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titlePage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:text="@string/add_address"
        android:textAlignment="textEnd"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/medium_text_page_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/marketBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/marketBtn"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="@dimen/big_margin"
        android:background="@drawable/primary_rounded_button"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/titlePage"
        app:layout_constraintTop_toTopOf="@+id/btnBack"
        app:srcCompat="@drawable/address_point_icon"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grand_margin"
        android:text="@string/my_cart"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePage" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productInCardRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grand_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <View
        android:id="@+id/backGroundLayer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grand_margin"
        android:background="@drawable/dark_rounded_panel"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toTopOf="@+id/amountLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/grand_margin"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deliveryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grand_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/delivery"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_page_size"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/deliveryField"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deliveryField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/grand_margin"
        android:text="Free"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_page_size"
        app:layout_constraintBottom_toBottomOf="@+id/deliveryLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/deliveryLabel"
        app:layout_constraintTop_toTopOf="@+id/deliveryLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:text="@string/total"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_page_size"
        app:layout_constraintBottom_toTopOf="@+id/deliveryLabel"
        app:layout_constraintStart_toStartOf="@+id/deliveryLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amountField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:textColor="@color/white"
        android:textSize="@dimen/primary_text_page_size"
        app:layout_constraintBottom_toBottomOf="@+id/amountLabel"
        app:layout_constraintEnd_toEndOf="@+id/deliveryField"
        app:layout_constraintTop_toTopOf="@+id/amountLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_margin="@dimen/medium_margin"
        android:layout_marginBottom="440dp"
        android:background="@drawable/primary_rounded_button"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>