<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:elevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/half_rounded_panel"
    android:padding="@dimen/medium_margin">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleProductField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/title_page_size"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintBottom_toBottomOf="@+id/isFavorite"
        app:layout_constraintEnd_toStartOf="@+id/isFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/isFavorite" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/isFavorite"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:background="@drawable/dark_rounded_button"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/is_favorite_image_state" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleIndicator"
        android:numStars="5"
        android:rating="5"
        android:layout_marginTop="@dimen/small_margin"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="@+id/titleProductField"
        app:layout_constraintTop_toBottomOf="@+id/titleProductField" />



    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/primaryColor"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabTextColor="@color/grey"
        android:theme="@style/Theme.EffectiveMobileTest"
        app:tabSelectedTextColor="@color/blackColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cpuIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintEnd_toStartOf="@+id/cameraIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsRecycler"
        app:srcCompat="@drawable/cpu_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cpuField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/small_page_size"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/cpuIcon"
        app:layout_constraintStart_toStartOf="@+id/cpuIcon"
        app:layout_constraintTop_toBottomOf="@+id/cpuIcon"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cameraIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintEnd_toStartOf="@+id/ramIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cpuIcon"
        app:layout_constraintTop_toTopOf="@+id/cpuIcon"
        app:srcCompat="@drawable/camera_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cameraField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/grey"
        android:textSize="@dimen/small_page_size"
        app:layout_constraintEnd_toEndOf="@+id/cameraIcon"
        app:layout_constraintStart_toStartOf="@+id/cameraIcon"
        app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ramIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintEnd_toStartOf="@+id/sdIcon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraIcon"
        app:layout_constraintTop_toTopOf="@+id/cameraIcon"
        app:srcCompat="@drawable/ram_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ramField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/grey"
        android:textSize="@dimen/small_page_size"
        app:layout_constraintEnd_toEndOf="@+id/ramIcon"
        app:layout_constraintStart_toStartOf="@+id/ramIcon"
        app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sdIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ramIcon"
        app:layout_constraintTop_toTopOf="@+id/ramIcon"
        app:srcCompat="@drawable/sd_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sdField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="@dimen/small_margin"
        android:textColor="@color/grey"
        android:textSize="@dimen/small_page_size"
        app:layout_constraintEnd_toEndOf="@+id/sdIcon"
        app:layout_constraintStart_toStartOf="@+id/sdIcon"
        app:layout_constraintTop_toBottomOf="@+id/cameraIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleSelectColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/select_color_and_capacity"
        android:textSize="@dimen/primary_text_page_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpuField"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorAndCapacityRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSelectColor" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnAddToCart"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@drawable/primary_rounded_button"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorAndCapacityRecycler">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textSize="@dimen/middle_text_page_size"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fieldAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/middle_text_page_size"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>